@@ -84,6 +84,7 @@ DEV_OPS_VERSION_ENV_MAP = {
 }
 DEV_OPS_RESPONSE_HTTP_ACCEPTED = 202
 DEV_OPS_RESPONSE_HTTP_CREATED = 201
+DEV_OPS_DEFAULT_DATABASES_PAGE_SIZE = 25  # TODO changeme
 
 # Settings for redacting secrets in string representations and logging
 SECRETS_REDACT_ENDING = "..."
